[tool.poetry]
name = "echobot"
version = "1.0.0-alpha.1"
description = "An out-of-box chatbot for QQ, distro of NoneBot 2"
authors = ["Satoshi Jek <jks15satoshi@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-alpha.16"
nonebot-adapter-cqhttp = "^2.0.0-alpha.16"

[tool.poetry.dev-dependencies]
nonebot-plugin-test = "^0.3.0"
nonebug = "^0.1.0"
pylint = "^2.12.2"
yapf = "^0.31.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
